force-app/main/default/objects/Consulting_Data__c/Consulting_Data__c.object-meta.xml
<CustomObject>
    <label>Consulting Data</label>
    <nameField>
        <displayFormat>C{0000}</displayFormat>
        <label>Consulting Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ConsultingData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>