force-app/main/default/objects/Consulting_Data__c/fields/Cost_Center_SAP__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_SAP__c</fullName>
    <label>Cost Center (SAP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>