force-app/main/default/objects/Consulting_Data__c/fields/FY__c.field-meta.xml
<CustomField>
    <fullName>FY__c</fullName>
    <label>FY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>