force-app/main/default/objects/Consulting_Data__c/fields/FY_Quarter__c.field-meta.xml
<CustomField>
    <fullName>FY_Quarter__c</fullName>
    <label>FY-Quarter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>