force-app/main/default/objects/Consulting_Data__c/fields/GBS_Director__c.field-meta.xml
<CustomField>
    <fullName>GBS_Director__c</fullName>
    <label>GBS Director</label>
    <length>255</length>
    <type>Text</type>
</CustomField>