force-app/main/default/objects/Consulting_Data__c/fields/GBU_High__c.field-meta.xml
<CustomField>
    <fullName>GBU_High__c</fullName>
    <defaultValue>&quot;GBS&quot;</defaultValue>
    <label>GBU - High</label>
    <length>200</length>
    <type>Text</type>
</CustomField>