force-app/main/default/objects/Consulting_Data__c/fields/GBU_Low__c.field-meta.xml
<CustomField>
    <fullName>GBU_Low__c</fullName>
    <defaultValue>&quot;GBS-UNASSIGNED&quot;</defaultValue>
    <label>GBU - Low</label>
    <length>200</length>
    <type>Text</type>
</CustomField>