force-app/main/default/objects/Consulting_Data__c/fields/GBU_SubProcAct__c.field-meta.xml
<CustomField>
    <fullName>GBU_SubProcAct__c</fullName>
    <label>GBU &amp; SubProcAct</label>
    <length>255</length>
    <type>Text</type>
</CustomField>