force-app/main/default/objects/Consulting_Data__c/fields/Invoice_Approver_Common_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Approver_Common_Name__c</fullName>
    <label>Invoice Approver Common-Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>