force-app/main/default/objects/Consulting_Data__c/fields/Invoice_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Approver_Email__c</fullName>
    <label>Invoice Approver Email</label>
    <type>Email</type>
</CustomField>