force-app/main/default/objects/Consulting_Data__c/fields/Invoice_Approver_SAP__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Approver_SAP__c</fullName>
    <label>Invoice Approver (SAP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>