force-app/main/default/objects/Consulting_Data__c/fields/Invoice_G_L_Account_SAP__c.field-meta.xml
<CustomField>
    <fullName>Invoice_G_L_Account_SAP__c</fullName>
    <label>Invoice G/L Account (SAP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>