force-app/main/default/objects/Consulting_Data__c/fields/Invoice_Vendor_LONG_Name_SAP__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Vendor_LONG_Name_SAP__c</fullName>
    <label>Invoice Vendor LONG Name (SAP)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>