force-app/main/default/objects/Consulting_Data__c/fields/Invoice_Vendor_SAP__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Vendor_SAP__c</fullName>
    <label>Invoice Vendor (SAP)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>