force-app/main/default/objects/Consulting_Data__c/fields/PO_G_L_Account_Desc__c.field-meta.xml
<CustomField>
    <fullName>PO_G_L_Account_Desc__c</fullName>
    <label>PO G/L Account Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>