force-app/main/default/objects/Consulting_Data__c/fields/PO_G_L_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_G_L_Account_Number__c</fullName>
    <label>PO G/L Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>