force-app/main/default/objects/Consulting_Data__c/fields/Process_Activity__c.field-meta.xml
<CustomField>
    <fullName>Process_Activity__c</fullName>
    <defaultValue>&quot;TOTAL ADM&quot;</defaultValue>
    <label>Process Activity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>