force-app/main/default/objects/Consulting_Data__c/fields/Procurement_Method__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Method__c</fullName>
    <defaultValue>&quot;BBP Free text&quot;</defaultValue>
    <label>Procurement Method</label>
    <length>200</length>
    <type>Text</type>
</CustomField>