force-app/main/default/objects/Consulting_Data__c/fields/Procurement_Method_BMW__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Method_BMW__c</fullName>
    <defaultValue>&quot;PO&quot;</defaultValue>
    <label>Procurement Method_BMW</label>
    <length>200</length>
    <type>Text</type>
</CustomField>