force-app/main/default/objects/Consulting_Data__c/fields/Region_BMW__c.field-meta.xml
<CustomField>
    <fullName>Region_BMW__c</fullName>
    <label>Region_BMW</label>
    <length>200</length>
    <type>Text</type>
</CustomField>