force-app/main/default/objects/Consulting_Data__c/fields/Rolled_Up_Vendor_Names__c.field-meta.xml
<CustomField>
    <fullName>Rolled_Up_Vendor_Names__c</fullName>
    <label>Rolled-Up Vendor Names</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>