force-app/main/default/objects/Consulting_Data__c/fields/Spend_Pool_Low_BMW__c.field-meta.xml
<CustomField>
    <fullName>Spend_Pool_Low_BMW__c</fullName>
    <defaultValue>&quot;Consulting&quot;</defaultValue>
    <label>Spend Pool - Low_BMW</label>
    <length>200</length>
    <type>Text</type>
</CustomField>