force-app/main/default/objects/Consulting_Data__c/fields/SRA_Cost_Center_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>SRA_Cost_Center_Owner_Email__c</fullName>
    <label>SRA Cost Center Owner Email</label>
    <type>Email</type>
</CustomField>