force-app/main/default/objects/Consulting_Data__c/fields/SRA_Cost_Center_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>SRA_Cost_Center_Owner_Name__c</fullName>
    <label>SRA Cost Center Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>