force-app/main/default/objects/Consulting_Data__c/fields/Sub_Process_Activity__c.field-meta.xml
<CustomField>
    <fullName>Sub_Process_Activity__c</fullName>
    <defaultValue>&quot;GBS BUSINESS BUILDIN&quot;</defaultValue>
    <label>Sub-Process Activity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>