force-app/main/default/objects/Consulting_Data__c/fields/Sub_Process_Activity_BMW__c.field-meta.xml
<CustomField>
    <fullName>Sub_Process_Activity_BMW__c</fullName>
    <defaultValue>&quot;Business Building Solutions&quot;</defaultValue>
    <label>Sub-Process Activity_BMW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>