force-app/main/default/objects/Consulting_Data__c/fields/SubSub_Process_Activity__c.field-meta.xml
<CustomField>
    <fullName>SubSub_Process_Activity__c</fullName>
    <label>SubSub-Process Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>