force-app/main/default/objects/Consulting_Data__c/fields/SumOfInvoice_Spend__c.field-meta.xml
<CustomField>
    <fullName>SumOfInvoice_Spend__c</fullName>
    <label>SumOfInvoice Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>