force-app/main/default/objects/Consulting_Data__c/fields/SumOfNo_of_Invoice_Lines__c.field-meta.xml
<CustomField>
    <fullName>SumOfNo_of_Invoice_Lines__c</fullName>
    <label>SumOfNo of Invoice Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>