force-app/main/default/objects/Consulting_Data__c/fields/Y__c.field-meta.xml
<CustomField>
    <fullName>Y__c</fullName>
    <label>Y</label>
    <length>100</length>
    <type>Text</type>
</CustomField>