force-app/main/default/objects/Consulting_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Spend_Pool_Low_BMW__c</columns>
    <columns>Rolled_Up_Vendor_Names__c</columns>
    <columns>Invoice_Vendor_SAP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>